# canvas-tool

./: .uvrc  CLAUDE.md  README.md  TEST_REPORT.md  comprehensive-test-guide.md  example.md  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test-api-endpoints.js  test-browser.js  test-chat-fix.js  test-functions.js
docs/: prd.md  progress.md
logs/: .d53adab446bb8115b78a46c880112309259bb464-audit.json
playwright-report/: index.html
prisma/: schema.prisma
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/api/canvases/: route.ts
src/app/api/canvases/[id]/: route.ts
src/app/api/chat/: route.ts
src/app/api/chat-sessions/: route.ts
src/app/api/chat-sessions/[id]/messages/: route.ts
src/app/api/user/provider-settings/: route.ts
src/app/auth/signin/: page.tsx
src/components/: AuthWrapper.tsx  CanvasSidebar.tsx  ChatAssistant.tsx  SessionProvider.tsx
src/hooks/: useCanvasSync.ts
src/lib/: auth.ts
test-results/: .last-run.json
tests/: auth.test.ts  canvas.test.ts  chat.test.ts  comprehensive.test.ts  pdf-export.test.ts  provider-settings.test.ts
